# Lima-camera-maxipix

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
cmake/: FindEspia.cmake  project-config.cmake.in
conda/camera/: meta.yaml
conda/tango/: meta.yaml
include/: MaxipixCamera.h  MpxDacs.h  PriamAcq.h
sip/: MaxipixCamera.sip  MaxipixInterface.sip  MaxipixReconstruction.sip  MpxDacs.sip  PixelArray.sip  PriamAcq.sip  PriamSerial.sip
src/: MaxipixCamera.cpp  MpxDacs.cpp  PriamAcq.cpp
tango/: CMakeLists.txt  Maxipix.py
